attempted to align grid, issues with rotation, grid not aligned

--- a/css/style.css
+++ b/css/style.css
@@ -1,16 +1,23 @@
 * {
   box-sizing: border-box; }
 
-body main .Y {
-  display: flex;
-  flex-wrap: wrap;
-  justify-content: center; }
-  body main .Y .X {
+body {
+  height: 1300px; }
+  body main {
     display: flex;
-    flex-flow: column wrap; }
-    body main .Y .X .items {
-      width: 90px;
-      height: 60px;
-      border: 1px solid black; }
+    flex-direction: column;
+    align-items: center;
+    align-content: center; }
+    body main .container1 {
+      display: flex;
+      width: 900px;
+      height: 750px; }
+      body main .container1 .Y {
+        display: flex;
+        flex-flow: column wrap;
+        width: 3.6%; }
+        body main .container1 .Y .items {
+          height: 2.7%;
+          border: 1px solid black; }
 
 /*# sourceMappingURL=style.css.map */
